--- a/deploy-with-bosh.html.md.erb
+++ b/deploy-with-bosh.html.md.erb
@@ -2,8 +2,25 @@
 title: Deploying Distributed Software with BOSH
 ---
 
-foo
+This topic is geared towards the reader who has set up an IaaS instance for BOSH,
+deployed MicroBOSH, and is now ready to deploy multi-VM BOSH.
+The assumed goal is to use multi-VM BOSH as the primary toolset for deploying
+other distributed software and for managing the lifecycle of that software.
 
+This is a tutorial in using MicroBOSH to deploy multi-VM BOSH.
+It belongs the larger category of stories about
+using BOSH to deploy distributed software.
+That category includes many possibilities.
+For example:
+
+* Using multi-VM BOSH to deploy a BOSH release of a key-value store.
+* Using MicroBOSH to deploy a distributed messaging service.
+* Using multi-VM BOSH to deploy Cloud Foundry.
+
+When you work through this tutorial, you experience what the BOSH development
+team thinks of as the canonical example of using BOSH.
+Even if you plan to use BOSH in a different way, the knowledge shared here
+should give you a good idea of how things are supposed to work.
 
 ## <a id="foo"></a> foo ##
 
