--- a/deploy-with-bosh.html.md.erb
+++ b/deploy-with-bosh.html.md.erb
@@ -7,9 +7,9 @@ deployed MicroBOSH, and is now ready to deploy multi-VM BOSH.
 The assumed goal is to use multi-VM BOSH as the primary toolset for deploying
 other distributed software and for managing the lifecycle of that software.
 
-This is a tutorial in using MicroBOSH to deploy multi-VM BOSH.
+This is a tutorial in _using MicroBOSH to deploy multi-VM BOSH_.
 It belongs the larger category of stories about
-using BOSH to deploy distributed software.
+_using BOSH to deploy distributed software_.
 That category includes many possibilities.
 For example:
 
@@ -19,8 +19,8 @@ For example:
 
 When you work through this tutorial, you experience what the BOSH development
 team thinks of as the canonical example of using BOSH.
-Even if you plan to use BOSH in a different way, the knowledge shared here
-should give you a good idea of how things are supposed to work.
+Even if you plan to use BOSH in a different way, you will have a useful sense of
+how things are supposed to work.
 
 ## <a id="foo"></a> foo ##
 
