--- a/how-bosh-works.html.md.erb
+++ b/how-bosh-works.html.md.erb
@@ -96,4 +96,4 @@ The interaction between IaaS, Agent, Registry, and Worker follows this pattern:
 1. The Agent uses the information to configure the VM.
 
 **Note**: vSphere does not use the Registry.
-Instead, a CD-ROM ISO image that BOSH attaches to each VM provides the same information that the Registry would.
+Instead, a CD-ROM ISO image that BOSH attaches to each vSphere VM provides the same information that the Registry would.
